[gd_scene load_steps=2 format=3 uid="uid://bp0xrblk1wvrb"]

[ext_resource type="Script" path="res://hud.gd" id="1_uw1wc"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_uw1wc")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.513726)

[node name="Message" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -13.0
offset_right = 46.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 156
text = "PalMapleStory


"

[node name="RestartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -154.0
offset_top = -328.0
offset_right = 146.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(2.08165e-12, 2.08165e-12)
theme_override_colors/icon_normal_color = Color(0.74902, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0.811765, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.796078, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.756863, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "New Game
"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
